- fixed height of vertical business card - fixed vertical flex reverse image alignment

--- a/src/less/pages/about-us.page.less
+++ b/src/less/pages/about-us.page.less
@@ -429,6 +429,7 @@
             .vertical {
                 display: flex;
                 align-items: stretch;
+                justify-content: space-between;
                 flex-direction: column;
                 background-color: @white;
                 border: @lines-grey solid 1px;
@@ -440,7 +441,7 @@
                     .leader-img {
                         position: relative;
                         img {
-                            position: absolute;
+                            //position: absolute;
                             left: 0;
                             bottom: 0;
                         }
@@ -448,7 +449,7 @@
                 }
 
                 .leader-img {
-                    height: 50%;
+                    //height: 50%;
                     width: 100%;
 
                     img {
